<resources>
    <string name="app_name">Credit Notebook</string>
  <string name="credit_list">Credit List</string>
  <string name="error_loading_list">Error Loading List</string>
  <string name="debit">DEBIT</string>
  <string name="credit">CREDIT</string>
  <string name="number_decimal_hint">0.00</string>
  <string name="phone_number_hint">+639xxxxxxxx</string>
  <string name="transaction">Transaction</string>
  <string name="person_name_hint">Person Name</string>
  <string name="error_adding_transaction">Error adding transaction</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="person_name_cannot_be_blank">Person name cannot be blank</string>
    <string name="phone_number_cannot_be_blank">Phone number cannot be blank</string>
  <string name="transaction_has_been_added">Transaction has been added</string>
  <string name="dummy_name">Dummy Name</string>
  <string name="total_credit">Total Credit</string>
  <string name="total_credit_placeholder">Total Credit: %s</string>
  <string name="person_name">Person Name</string>
  <string name="debit_value_cannot_be_blank">Debit value cannot be blank</string>
  <string name="person_transaction">Person Transaction</string>
  <string name="something_went_wrong">Something went wrong</string>
  <string name="error_loading_person_information">Error loading person information</string>
  <string name="empty_credit_list">Empty Credit List</string>
    <string name="delete">Delete</string>
  <string name="are_you_sure">Are you sure?</string>
  <string name="ok">Ok</string>
  <string name="undo">Undo</string>
  <string name="error_deleting">An error occured during delete</string>
</resources>
