<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/credit_notebook_navigation"
    app:startDestination="@+id/homeFragment">

  <fragment
      android:id="@+id/homeFragment"
      android:name="bry1337.github.io.creditnotebook.presentation.home.HomeFragment"
      android:label="@string/credit_list"
      tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/action_to_transaction"
        app:destination="@+id/addTransactionFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"/>
    <action
        android:id="@+id/action_to_person_transaction"
        app:destination="@+id/personTransactionFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"/>
  </fragment>

  <fragment
      android:id="@+id/addTransactionFragment"
      android:name="bry1337.github.io.creditnotebook.presentation.addtransaction.AddTransactionFragment"
      android:label="@string/transaction"
      tools:layout="@layout/fragment_add_transaction">
    <argument
        android:name="personId"
        app:argType="integer" />
  </fragment>

  <fragment
      android:id="@+id/personTransactionFragment"
      android:name="bry1337.github.io.creditnotebook.presentation.persontransaction.PersonTransactionFragment"
      android:label="@string/person_transaction"
      tools:layout="@layout/fragment_person_transaction_history">
    <action
        android:id="@+id/action_to_add_transaction"
        app:destination="@+id/addTransactionFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"/>
    <argument
        android:name="personId"
        app:argType="integer" />
  </fragment>
</navigation>