<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <variable
        name="viewModel"
        type="bry1337.github.io.creditnotebook.presentation.persontransaction.PersonTransactionViewModel"
        />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

      <RelativeLayout
          android:id="@+id/rlPersonTransactionHeader"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_marginEnd="@dimen/value_16dp"
          android:layout_marginStart="@dimen/value_16dp"
          android:layout_marginTop="@dimen/value_8dp"
          android:gravity="center_vertical"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="@dimen/value_8dp"
            android:text="@string/person_name"
            android:textSize="@dimen/value_16sp"
            android:textStyle="bold"
            app:mutableText="@{viewModel.getPersonName()}"
            />

        <TextView
            android:id="@+id/tvPersonTransactionTotalCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/value_8dp"
            android:text="@string/total_credit"
            android:textSize="@dimen/value_16sp"
            android:textStyle="bold"
            />

      </RelativeLayout>

      <LinearLayout
          android:id="@+id/rlPersonDebitCreditheader"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/rlPersonTransactionHeader"
          android:gravity="center_vertical|end"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="@dimen/value_80dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/value_8dp"
            android:text="@string/debit"
            android:textSize="@dimen/value_16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvCredit"
            android:layout_width="@dimen/value_90dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/value_8dp"
            android:text="@string/credit"
            android:textSize="@dimen/value_16sp"
            android:textStyle="bold"
            />

      </LinearLayout>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvPersonTransaction"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_below="@+id/rlPersonDebitCreditheader"
          android:background="@android:color/darker_gray"
          android:orientation="vertical"
          app:adapter="@{viewModel.getTransactionListAdapter()}"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          tools:listitem="@layout/item_person_transaction"
          />

      <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
          />

    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddNewTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>